Update 0. Arduino Cheatsheet.md

--- a/0. Arduino Cheatsheet.md
+++ b/0. Arduino Cheatsheet.md
@@ -1,158 +1,96 @@
-Arduino Cheatsheet: Functions, Libraries, and Quick Reference
+# Arduino Cheatsheet: Functions, Libraries, and Quick Reference
+
 This cheatsheet provides a concise reference for key Arduino functions, commonly used libraries, and tips for programming microcontrollers. Perfect for engineering students working on embedded systems projects.
-Core Arduino Functions
-Setup and Loop
 
-void setup(): Runs once at startup. Initialize pins, Serial, etc.
-void loop(): Runs repeatedly. Main program logic.
+## Core Arduino Functions
 
-Digital I/O
+### Setup and Loop
+- `void setup()`: Runs once at startup. Initialize pins, Serial, etc.
+- `void loop()`: Runs repeatedly. Main program logic.
 
-pinMode(pin, mode): Sets pin mode (INPUT, OUTPUT, INPUT_PULLUP).
-digitalWrite(pin, value): Sets pin HIGH (5V) or LOW (0V).
-digitalRead(pin): Reads pin state (HIGH or LOW).
+### Digital I/O
+- `pinMode(pin, mode)`: Sets pin mode (`INPUT`, `OUTPUT`, `INPUT_PULLUP`).
+- `digitalWrite(pin, value)`: Sets pin `HIGH` (5V) or `LOW` (0V).
+- `digitalRead(pin)`: Reads pin state (`HIGH` or `LOW`).
 
-Analog I/O
+### Analog I/O
+- `analogRead(pin)`: Reads analog input (0-1023, 10-bit ADC) on pins A0-A5.
+- `analogWrite(pin, value)`: Outputs PWM (0-255) on PWM-capable pins (e.g., 3, 5, 6, 9, 10, 11 on Uno).
+- `analogReference(type)`: Sets ADC reference voltage (`DEFAULT`, `INTERNAL`, `EXTERNAL`).
 
-analogRead(pin): Reads analog input (0-1023, 10-bit ADC) on pins A0-A5.
-analogWrite(pin, value): Outputs PWM (0-255) on PWM-capable pins (e.g., 3, 5, 6, 9, 10, 11 on Uno).
-analogReference(type): Sets ADC reference voltage (DEFAULT, INTERNAL, EXTERNAL).
+### Timing
+- `delay(ms)`: Pauses program for milliseconds (blocking).
+- `delayMicroseconds(us)`: Pauses for microseconds.
+- `millis()`: Returns milliseconds since program start (unsigned long).
+- `micros()`: Returns microseconds since program start.
 
-Timing
+### Serial Communication
+- `Serial.begin(baud)`: Starts serial at baud rate (e.g., 9600).
+- `Serial.print(val)`: Prints data to Serial Monitor.
+- `Serial.println(val)`: Prints with newline.
+- `Serial.read()`: Reads incoming byte.
+- `Serial.available()`: Returns bytes available to read.
 
-delay(ms): Pauses program for milliseconds (blocking).
-delayMicroseconds(us): Pauses for microseconds.
-millis(): Returns milliseconds since program start (unsigned long).
-micros(): Returns microseconds since program start.
+### Interrupts
+- `attachInterrupt(digitalPinToInterrupt(pin), ISR, mode)`: Attaches interrupt to pin (e.g., 2, 3 on Uno). Modes: `LOW`, `CHANGE`, `RISING`, `FALLING`.
+- `detachInterrupt(digitalPinToInterrupt(pin))`: Disables interrupt.
 
-Serial Communication
+### Math and Logic
+- `map(value, fromLow, fromHigh, toLow, toHigh)`: Scales value to new range.
+- `constrain(x, a, b)`: Limits x to range [a, b].
+- `random(min, max)`: Generates random number.
 
-Serial.begin(baud): Starts serial at baud rate (e.g., 9600).
-Serial.print(val): Prints data to Serial Monitor.
-Serial.println(val): Prints with newline.
-Serial.read(): Reads incoming byte.
-Serial.available(): Returns bytes available to read.
+## Common Arduino Libraries
 
-Interrupts
+| Library        | Purpose                                    | Key Functions/Usage                           | Example Modules                     |
+|----------------|--------------------------------------------|-----------------------------------------------|-------------------------------------|
+| `Servo.h`      | Controls servo motors                      | `Servo myServo; myServo.attach(pin); myServo.write(angle);` | SG90, TowerPro servos              |
+| `Wire.h`       | I2C communication                         | `Wire.begin(); Wire.write(addr, data); Wire.read();` | MPU6050, OLED displays (SSD1306)   |
+| `SPI.h`        | SPI communication                         | `SPI.begin(); SPI.transfer(data);`            | SD card modules, TFT displays       |
+| `LiquidCrystal.h` | LCD displays (16x2, 20x4)                | `LiquidCrystal lcd(rs, en, d4, d5, d6, d7); lcd.print("text");` | HD44780-based LCDs                |
+| `DHT.h`        | Temperature/humidity sensors               | `DHT dht(pin, DHT11); dht.readTemperature();` | DHT11, DHT22                       |
+| `SoftwareSerial.h` | Software-based serial ports              | `SoftwareSerial mySerial(rxPin, txPin); mySerial.begin(9600);` | GPS modules, Bluetooth (HC-05)     |
+| `EEPROM.h`     | Persistent storage (EEPROM read/write)     | `EEPROM.read(addr); EEPROM.write(addr, value);` | Save settings                      |
+| `Stepper.h`    | Stepper motor control                     | `Stepper myStepper(steps, pin1, pin2); myStepper.step(num);` | ULN2003, 28BYJ-48 motors          |
+| `Adafruit_Sensor.h` | Unified sensor interface                 | Used with Adafruit libraries for sensors      | BME280, VL53L0X                    |
+| `IRremote.h`   | Infrared remote control                   | `IRrecv irrecv(pin); decode_results results;` | IR receivers for remotes           |
 
-attachInterrupt(digitalPinToInterrupt(pin), ISR, mode): Attaches interrupt to pin (e.g., 2, 3 on Uno). Modes: LOW, CHANGE, RISING, FALLING.
-detachInterrupt(digitalPinToInterrupt(pin)): Disables interrupt.
+## Pin Reference (Arduino Uno)
+- **Digital Pins**: 0-13 (0, 1 for Serial; 2, 3 for interrupts).
+- **PWM Pins**: 3, 5, 6, 9, 10, 11 (`analogWrite`).
+- **Analog Input**: A0-A5 (10-bit resolution).
+- **Power**: 5V, 3.3V, GND, Vin.
 
-Math and Logic
+## Memory Management
+- **SRAM**: 2KB (Uno). Avoid large variables/arrays.
+- **Flash**: 32KB (program storage).
+- **EEPROM**: 1KB (persistent). Use `EEPROM.h`.
+- **PROGMEM**: Store constants in Flash: `const char PROGMEM str[] = "text";`.
 
-map(value, fromLow, fromHigh, toLow, toHigh): Scales value to new range.
-constrain(x, a, b): Limits x to range [a, b].
-random(min, max): Generates random number.
+## Best Practices
+- **Non-Blocking Code**: Use `millis()` instead of `delay()`:
+  ```c
+  unsigned long previousMillis = 0;
+  const long interval = 1000;
+  void loop() {
+      if (millis() - previousMillis >= interval) {
+          previousMillis = millis();
+          // Action
+      }
+  }
+  ```
+- **Commenting**: `// Pin assignments`, `/* Multi-line block */`.
+- **Debugging**: Use `Serial.println()` for variable states.
+- **Modularize**: Write functions: `void readSensor() { /* code */ }`.
 
-Common Arduino Libraries
+## Quick Tips
+- **Pin Conflicts**: Avoid using Serial pins (0, 1) for other tasks.
+- **Libraries**: Install via Arduino IDE Library Manager or include `.h` files.
+- **Verify Memory**: Check SRAM usage in IDE (`Sketch > Verify/Compile`).
+- **Interrupts**: Use for time-critical tasks, but keep ISRs short.
 
-
-
-Library
-Purpose
-Key Functions/Usage
-Example Modules
-
-
-
-Servo.h
-Controls servo motors
-Servo myServo; myServo.attach(pin); myServo.write(angle);
-SG90, TowerPro servos
-
-
-Wire.h
-I2C communication
-Wire.begin(); Wire.write(addr, data); Wire.read();
-MPU6050, OLED displays (SSD1306)
-
-
-SPI.h
-SPI communication
-SPI.begin(); SPI.transfer(data);
-SD card modules, TFT displays
-
-
-LiquidCrystal.h
-LCD displays (16x2, 20x4)
-LiquidCrystal lcd(rs, en, d4, d5, d6, d7); lcd.print("text");
-HD44780-based LCDs
-
-
-DHT.h
-Temperature/humidity sensors
-DHT dht(pin, DHT11); dht.readTemperature();
-DHT11, DHT22
-
-
-SoftwareSerial.h
-Software-based serial ports
-SoftwareSerial mySerial(rxPin, txPin); mySerial.begin(9600);
-GPS modules, Bluetooth (HC-05)
-
-
-EEPROM.h
-Persistent storage (EEPROM read/write)
-EEPROM.read(addr); EEPROM.write(addr, value);
-Save settings
-
-
-Stepper.h
-Stepper motor control
-Stepper myStepper(steps, pin1, pin2); myStepper.step(num);
-ULN2003, 28BYJ-48 motors
-
-
-Adafruit_Sensor.h
-Unified sensor interface
-Used with Adafruit libraries for sensors
-BME280, VL53L0X
-
-
-IRremote.h
-Infrared remote control
-IRrecv irrecv(pin); decode_results results;
-IR receivers for remotes
-
-
-Pin Reference (Arduino Uno)
-
-Digital Pins: 0-13 (0, 1 for Serial; 2, 3 for interrupts).
-PWM Pins: 3, 5, 6, 9, 10, 11 (analogWrite).
-Analog Input: A0-A5 (10-bit resolution).
-Power: 5V, 3.3V, GND, Vin.
-
-Memory Management
-
-SRAM: 2KB (Uno). Avoid large variables/arrays.
-Flash: 32KB (program storage).
-EEPROM: 1KB (persistent). Use EEPROM.h.
-PROGMEM: Store constants in Flash: const char PROGMEM str[] = "text";.
-
-Best Practices
-
-Non-Blocking Code: Use millis() instead of delay():unsigned long previousMillis = 0;
-const long interval = 1000;
-void loop() {
-    if (millis() - previousMillis >= interval) {
-        previousMillis = millis();
-        // Action
-    }
-}
-
-
-Commenting: // Pin assignments, /* Multi-line block */.
-Debugging: Use Serial.println() for variable states.
-Modularize: Write functions: void readSensor() { /* code */ }.
-
-Quick Tips
-
-Pin Conflicts: Avoid using Serial pins (0, 1) for other tasks.
-Libraries: Install via Arduino IDE Library Manager or include .h files.
-Verify Memory: Check SRAM usage in IDE (Sketch > Verify/Compile).
-Interrupts: Use for time-critical tasks, but keep ISRs short.
-
-Example: Blinking LED with Button
+## Example: Blinking LED with Button
+```c
 const int ledPin = 13;
 const int buttonPin = 2;
 
@@ -168,9 +106,9 @@ void loop() {
         digitalWrite(ledPin, LOW);
     }
 }
+```
 
-Resources
-
-Arduino Reference: https://www.arduino.cc/reference/en/
-Library Manager: Arduino IDE > Sketch > Include Library
-Community: Arduino Forum, Stack Exchange
+## Resources
+- Arduino Reference: `https://www.arduino.cc/reference/en/`
+- Library Manager: Arduino IDE > Sketch > Include Library
+- Community: Arduino Forum, Stack Exchange
