Update 0.4. Arduino Final Year Projects..md

--- a/0.4. Arduino Final Year Projects..md
+++ b/0.4. Arduino Final Year Projects..md
@@ -55,21 +55,11 @@ This cheatsheet lists advanced Arduino-based projects suitable for final-year en
 | **Greenhouse Monitoring**   | Monitors temperature, humidity, and light; controls vents. | Arduino Uno, DHT22 sensor, LDR, servo motor (SG90), 16x2 LCD, resistors, breadboard, jumper wires. | Controlled environment agriculture. |
 | **Smart Plant Health Monitor**| Tracks soil moisture, light, and temperature; logs data. | Arduino Uno, soil moisture sensor, LDR, DS18B20 temperature sensor, SD card module, resistors, breadboard, jumper wires. | Plant health, data-driven farming. |
 | **Pest Detection System**   | Uses sound or motion sensors to detect pests; alerts farmer. | Arduino Uno, sound sensor (KY-038), PIR sensor, buzzer, ESP8266 WiFi module, resistors, breadboard, jumper wires. | Crop protection, smart farming. |
-| **Precision Soil Nutrient Analyzer** | Measures soil pH, nitrogen, and moisture levels for targeted fertilization; logs data to cloud. | Arduino Uno, soil pH sensor, NPK soil sensor, soil moisture sensor, ESP8266 WiFi module, resistors, breadboard, jumper wires. | Precision agriculture, optimized fertilizer use.<grok:render card_id="006a74" card_type="citation_card" type="render_inline_citation">
-<argument name="citation_id">11</argument>
-</grok:render> |
-| **Multipurpose Agricultural Robot** | Autonomous vehicle for seeding, watering, and monitoring crops using sensors and GPS. | Arduino Mega, GPS module (NEO-6M), L298N motor driver, DC motors, chassis, soil moisture sensor, servo for seeding, battery, resistors, breadboard, jumper wires. | Precision farming automation, multi-task robotics.<grok:render card_id="7c5aba" card_type="citation_card" type="render_inline_citation">
-<argument name="citation_id">7</argument>
-</grok:render> |
-| **IoT-Based Crop Monitoring System** | Monitors soil, weather, and plant health parameters; provides real-time alerts via app. | Arduino Uno, DHT11 sensor, soil moisture sensor, LDR, ESP8266 WiFi module, buzzer, resistors, breadboard, jumper wires. | Data-driven precision agriculture, remote monitoring.<grok:render card_id="33d34c" card_type="citation_card" type="render_inline_citation">
-<argument name="citation_id">2</argument>
-</grok:render> |
-| **Variable Rate Irrigation Controller** | Adjusts water flow in zones based on soil moisture data for efficient irrigation. | Arduino Edge Control or Uno, multiple soil moisture sensors, solenoid valves, relay modules, ESP8266 WiFi module, resistors, breadboard, jumper wires. | Precision water management, resource optimization.<grok:render card_id="2c43fb" card_type="citation_card" type="render_inline_citation">
-<argument name="citation_id">0</argument>
-</grok:render> |
-| **Automated Tomato Farm Controller (ArduFarmBot)** | Controls lighting, watering, and ventilation for hydroponic tomato farming; logs growth data. | Arduino Uno, DHT22 sensor, soil moisture sensor, relay for pumps/lights, 16x2 LCD, resistors, breadboard, jumper wires. | Precision crop-specific farming, hydroponics.<grok:render card_id="022c2d" card_type="citation_card" type="render_inline_citation">
-<argument name="citation_id">3</argument>
-</grok:render> |
+| **Precision Soil Nutrient Analyzer** | Measures soil pH, nitrogen, and moisture levels for targeted fertilization; logs data to cloud. | Arduino Uno, soil pH sensor, NPK soil sensor, soil moisture sensor, ESP8266 WiFi module, resistors, breadboard, jumper wires. | Precision agriculture, optimized fertilizer use.
+| **Multipurpose Agricultural Robot** | Autonomous vehicle for seeding, watering, and monitoring crops using sensors and GPS. | Arduino Mega, GPS module (NEO-6M), L298N motor driver, DC motors, chassis, soil moisture sensor, servo for seeding, battery, resistors, breadboard, jumper wires. | Precision farming automation, multi-task robotics.
+| **IoT-Based Crop Monitoring System** | Monitors soil, weather, and plant health parameters; provides real-time alerts via app. | Arduino Uno, DHT11 sensor, soil moisture sensor, LDR, ESP8266 WiFi module, buzzer, resistors, breadboard, jumper wires. | Data-driven precision agriculture, remote monitoring.
+| **Variable Rate Irrigation Controller** | Adjusts water flow in zones based on soil moisture data for efficient irrigation. | Arduino Edge Control or Uno, multiple soil moisture sensors, solenoid valves, relay modules, ESP8266 WiFi module, resistors, breadboard, jumper wires. | Precision water management, resource optimization.
+| **Automated Tomato Farm Controller (ArduFarmBot)** | Controls lighting, watering, and ventilation for hydroponic tomato farming; logs growth data. | Arduino Uno, DHT22 sensor, soil moisture sensor, relay for pumps/lights, 16x2 LCD, resistors, breadboard, jumper wires. | Precision crop-specific farming, hydroponics.
 
 ## General Tips
 - **Power Management**: Use 9V-12V external power for high-current components (motors, relays). Include TP4056 for battery-powered projects.
