Update 3. Digital and Analog IO.md

--- a/3. Digital and Analog IO.md
+++ b/3. Digital and Analog IO.md
@@ -1,7 +1,6 @@
 # Module 3 Lecture: Digital and Analog I/O in Arduino ⚡🔌
+- 🤖Instructor: Md. Hassanul Karim Roni, Assistant Professor, EEE, HSTU,Dinajpur,BD
 
-**Hey Arduino Rockstars!**  
-Welcome back to our Arduino journey! 🎉 In Module 2, you mastered C/C++ fundamentals, making LEDs dance with buttons and counting like pros on the Serial Monitor. Today, in **Module 3: Digital and Analog I/O**, we’re leveling up to control hardware with precision. We’ll explore digital and analog inputs/outputs, PWM for cool effects like LED dimming, interrupts for snappy responses, and timing techniques to keep things smooth. Get ready for two exciting projects: a **potentiometer-controlled LED brightness** and a **traffic light simulator**! Let’s make hardware obey our code! 🚦💡
 
 ---
 
@@ -10,7 +9,8 @@ Welcome back to our Arduino journey! 🎉 In Module 2, you mastered C/C++ fundam
 - Learn Pulse Width Modulation (PWM) for analog-like control.  
 - Use interrupts for responsive, event-driven programming.  
 - Master timing with `delay()` and `millis()` for non-blocking code.  
-- Build and test projects to control real-world hardware.  
+- Build and test projects to control real-world hardware.
+- Projects in this lecture: **💡potentiometer-controlled LED brightness**, **🚦traffic light simulator**
 
 **Duration:** ~3 hours (1.5 hours lecture + 1.5 hours lab).  
 **Tools Needed:** Arduino Uno, USB cable, LED (3 colors for traffic light), 220Ω resistors (3), potentiometer (10kΩ), push button, 10kΩ resistor, breadboard, jumper wires, laptop with Arduino IDE, optional: Tinkercad Circuits.  
