Update 1.2 Arduino Features.md

--- a/1.2 Arduino Features.md
+++ b/1.2 Arduino Features.md
@@ -1,5 +1,6 @@
-# 📘 Lecture: Theoretical Concepts of Arduino for Beginners
-
+# 📘 Lecture: Arduino Features
+🤖Instructor: Md. Hassanul Karim Roni, Assistant Professor, EEE, HSTU,Dinajpur,BD
+---
 ### 🎯 **Learning Objectives**
 
 By the end of this lecture, students will be able to:
